--- a/dev/scss/sections/_section1.scss
+++ b/dev/scss/sections/_section1.scss
@@ -35,5 +35,19 @@
         }
       }
     }
+
+    @include md {
+      display: grid;
+      grid-template-columns: 40% auto;
+  }
+
+  @include lg {
+      grid-template-columns: 50% auto;
+  }
+
+  @include xl {
+    grid-template-columns: 16px 480px auto;
+  }
+
   }
 
